--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "set": "cpp",
         "stack": "cpp",
         "typeindex": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "functional": "cpp"
     }
 }
