using span for the col-j in the dense*sparse product, print foe debugging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "typeindex": "cpp",
         "unordered_set": "cpp",
         "functional": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "span": "cpp"
     }
 }
